docs: adicionar README com instruções de execução, build e testes

--- a/host/.env
+++ b/host/.env
@@ -1,2 +1,3 @@
 VITE_LOGO_BLACK = "https://teddydigital.io/wp-content/uploads/2023/10/logo-preto.png"
 VITE_LOGO_WHITE = "https://teddydigital.io/wp-content/uploads/2023/10/logo-branco.png"
+VITE_URL_REMOTE = "http://localhost:4173"
