--- a/clients/Dockerfile
+++ b/clients/Dockerfile
@@ -5,7 +5,7 @@ COPY package*.json ./
 RUN npm ci
 
 COPY . .
+RUN npm run build
 
 EXPOSE 5174
-
-CMD ["npm", "run", "dev", "--", "--port", "5174"]
+CMD ["npm", "run", "preview", "--", "--host", "0.0.0.0", "--port", "5174"]
