chore(clients): update .gitignore to exclude Cypress and coverage directories; add @vitest/coverage-v8 dependency in package.json and package-lock.json; remove obsolete Cypress test file; refactor Cypress modal test for better structure; update user service test data format

--- a/clients/.gitignore
+++ b/clients/.gitignore
@@ -12,6 +12,13 @@ dist
 dist-ssr
 *.local
 
+# Cypress
+cypress/videos
+cypress/screenshots
+
+#coverage
+coverage
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
