--- a/clients/package.json
+++ b/clients/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "@vitest/coverage-v8": "^4.0.5",
     "cypress": "^15.5.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
